[metadata]
name = django-check-seo
version = 0.0.0
description = Django Check SEO will check the SEO aspects of your site for you, and will provide advice in case of problems.
long_description = file: README.md
url = https://github.com/kapt-labs/django-check-seo
author = Dev Kapt
author_email = dev@kapt.mobi
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    djangocms-page-meta
    requests
    beautifulsoup4
